--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "yaml": "2.0.0-8"
   },
   "devDependencies": {
+    "@types/ejs": "^3.1.0",
     "@types/node": "^16.11.1",
     "@types/showdown": "^1.9.4",
     "typescript": "^4.4.4"
