--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "node index.js",
 		"server": "http-server www -p 8000 -c-1",
-		"watch": "nodemon index.js --watch themes --watch content  -e js,ejs,png,jpg,md,css"
+		"watch": "nodemon index.js --watch themes --watch content --watch index.js  -e js,ejs,png,jpg,md,css"
 	},
 	"keywords": [],
 	"author": "Arian Fornaris <arian@phasereditor2d.com>",
 	"license": "ISC",
 	"dependencies": {
+		"date-format-parse": "^0.2.7",
 		"ejs": "^3.1.6",
 		"shuffle-array": "^1.0.1"
 	},
