Se adicionan tags a los creadores.

--- a/themes/default/routes.conf
+++ b/themes/default/routes.conf
@@ -35,9 +35,13 @@ producto-list.ejs
 productos/**
 producto.ejs
 
-# tags productos
+# tags
 tags/productos/**
 tags-producto-list.ejs
+
+tags/creadores/**
+tags-creador-list.ejs
+
 
 # sobre
 
