Se adiciona una pagina para los gamejams.

--- a/themes/default/routes.conf
+++ b/themes/default/routes.conf
@@ -35,6 +35,13 @@ producto-list.ejs
 productos/**
 producto.ejs
 
+# jams
+jams
+jam-list.ejs
+
+jams/**
+jam.ejs
+
 # tags
 tags/productos/**
 tags-producto-list.ejs
