Se adiciona el festival nacional de videojuegos a los eventos.

--- a/themes/default/routes.conf
+++ b/themes/default/routes.conf
@@ -42,6 +42,13 @@ jam-list.ejs
 jams/**
 jam.ejs
 
+# eventos
+eventos
+evento-list.ejs
+
+eventos/**
+evento.ejs
+
 # tags
 tags/productos/**
 tags-producto-list.ejs
