--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,6 @@ jobs:
     - run: npm run build
     - uses: actions/upload-pages-artifact@v1.0.2
       with:
-        input.path: "www/"
+        path: "www/"
     - uses: actions/deploy-pages@v1.0.7
 
